ffplay: use dummy video driver if display is disabled

Fixes ticket 1402.

Signed-off-by: Marton Balint <cus@passwd.hu>